fix dropdown z-index

--- a/src/styles/override.scss
+++ b/src/styles/override.scss
@@ -11,6 +11,7 @@
     top: 100%;
     width: 100%;
     border: solid 1px #ddd;
+    z-index: 1;
 }
 
 .select-option {
